<resources>
    <string name="app_name">جمعيتي</string>
    <string name="action_settings">الإعدادات</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">تسجيل الدخول</string>
    <string name="user_name">إسم المستخدم</string>
    <string name="user_phone">رقم الهاتف</string>
    <string name="user_password">كلمة المرور</string>
    <string name="btn_login">تسجيل الدخول</string>
    <string name="btn_signup"><u>أنشئ حساب جديد</u></string>
    <string name="title_activity_sign_up">إنشاء حساب</string>
    <string name="parse_app_id">W4BiNGJnOVBjAqssRttv5R056NSqejcIPFyiFZna</string>
    <string name="parse_client_key">2df1kC7vsbvv9Vrc7uoAg5FIoA28KdtcOOUSuo8c</string>
    <string name="signup_error_message">خطأ حدث اثناء إنشاء المستخدم</string>
    <string name="signup_error_title">خطاء اثناء عملية التسجيل</string>
    <string name="login_error_message">خطاء</string>
    <string name="login_error_title">خطأ حدث اثناء  المستخدم</string>
    <string name="title_section1">جمعياتي</string>
    <string name="title_section2">التنبيهات</string>
    <string name="empty_jams_msg">لا يوجد جمعيات حاليا</string>
    <string name="empty_friends_msg">لا يوجد مشاركين متاحين حاليا</string>
    <string name="empty_inbox_msg">لا يوجد  تنبيهات حاليا</string>
    <string name="menu_edit_friends_lbl">تعديل المشاركين</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">error friends tab</string>
    <string name="title_activity_create_new_jam">جمعية جديدة</string>
    <string name="title_activity_participents">قاىمة المشاركين</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_jam_name">إسم الجمعية</string>
    <string name="new_jam_share_value">قيمة السهم</string>
    <string name="new_jam_shares_no">عدد الأسهم</string>
    <string name="new_jam_share_period">Share Period</string>
    <string name="new_jam_start_day">تاريخ بداية الجمعية</string>
    <string name="new_jam_is_public">أظهر للكل</string>
    <string name="share_delivery_date">تاريخ التسليم : </string>
    <string name="share_order">السهم رقم: %s</string>
    <string name="lbl_current_jam_name">إسم الجمعية</string>
    <string name="lbl_next_jam_date">موعد تسليم السهم</string>
    <string name="lbl_owner">المالك</string>
    <string name="title_activity_view_jam_details">الجمعية</string>
    <string name="btn_create_jam">أنشىء الجمعية</string>
    <string name="sub_shares_count_error">لقد تجاوزت الحد قيمة السهم</string>
    <string name="data_filling_issue">الرجاء إدخال جميع البيانات المطلوبة</string>
    <string name="lbl_creator">مؤسس الجمعية</string>
    <string name="delete_jam_title">حذف</string>
    <string name="delete_jam_confirm_btn">نعم</string>
    <string name="delete_jam_msg">تأكيد حذف الجمعية؟</string>
    <string name="delete_jam_cancel_btn">إلغاء</string>
    <string name="share_jam_body_msg"> هل ترغب بالمشاركة في جمعية بمبلغ _AMOUNT للسهم الواحد؟ لتحميل البرنامج إدخل على الرابط _LINK </string>
    <string name="jam_invite_link">https://play.google.com/store/apps/details?id=jam.mbarakat.com.myshares</string>
    <string name="share_invite_body_msg">تم دعوتك للمشاركه في جمعية , لمتابعة سهمك قم بالدخول على الرابط ادناه</string>
    <string name="share_invite_link">http://bazsmm.com/myjam.html?jamId=_JAMID&amp;shareOwner=_SHAREID</string>
    <string name="progress_title">الرجاء الإنتظار</string>
    <string name="progress_msg_delete">حذف الجمعية</string>
    <string name="progress_msg_show_jam">جاري عرض الجمعية</string>
    <string name="progress_msg_share_jam">مشاركة الجمعية</string>
    <string name="menu_logout">تسجيل الخروج</string>
    <string name="hint_share_owner_name">الإسم</string>
    <string name="hint_share_owner_amount">القيمة</string>
    <string name="lbl_delivered">سلمت</string>
    <string name="msg_interuuption">لقد تمت مقاطعتك أثاء التعديل, قم بالعوده للصفحة الرئيسية للمتابعة.</string>
    <string name="lbl_payers_list">قائمة المشاركين</string>
    <string name="lbl_back_to_share">عودة الى السهم</string>
    <string name="lbl_ask_if_paid">تم التحصيل ؟</string>
    <string name="lbl_cancel_payment">إلغاء التحصيل؟</string>
    <string name="new_jam_title">New Jam</string>
    <string name="sd">fdsf</string>
    <string name="banner_ad_unit_id">ca-app-pub-7049990115818203/5559041976</string>
    <string name="notification_ad">ca-app-pub-7049990115818203/7390748378</string>
    <string-array name="period_array">
        <item>شهري</item>
    </string-array>
    <string name="title_activity_open">OpenActivity</string>
    <string name="msg_sharing_info_msg">قم بإرسال السهم لمالكه لكي يستطيع متابعة مواعيد الجمعية، وذلك عن طريق أيقونة المشاركة و من خلال إحدى طرق الإتصال مثل واتسب.</string>
    <string name="share_info_with_friends_msg">بإمكان مالك السهم إعادة مشاركتة مع أصدقائه بنفس الطريقة.</string>
    <string name="txt_new_notification">لديك تنبيه جديد من %s</string>
    <string name="ntf_all_jam_users_to_pay">نبه الأعضاء بموعد الدفع</string>
    <string name="ntf_msg_body">يرجى دفع قيمة السهم التابع لجمعية %s</string>
    <string name="ntf_receive_msg_body">تنبيه لإستلام سهم جمعية %s</string>
    <string name="alert_done">تم!</string>
    <string name="ntf_from">المرسل : %s</string>
    <string name="lbl_share_order">dfgdfg</string>
    <string name="lbl_share_paid_user_side">تم تحصيل المبلغ</string>
    <string name="msg_delete_cancelation">عليك القيام بإلغاء جميع دفعات المشترك قبل حذفة.</string>
    <string name="dlg_ntf_title">تنبيه الإعضاء</string>
    <string name="dlg_ntf_msg">سوف يتم تنبيه جميع الأعضاء المتابعين لهذه الجمهية</string>
    <string name="dlg_nft_send">أرسل</string>
    <string name="share_email_native">share email native</string>
    <string name="share_email_subject">وصلة الإشتراك في جمعية جديدة</string>
    <string name="share_chooser_text">تابع دفعات سهمك</string>
    <string name="share_twitter">تويتر</string>
    <string name="share_facebook">فيسبوك</string>
    <string name="share_sms">رسالة</string>
    <string name="share_email_gmail">بريد</string>
    <string name="share_whatsapp">واتساب</string>
    <string name="share_viber">فايبر</string>
    <string name="str_jam_invite">دعوة للمشاركة بجمعية</string>
</resources>
