<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_sign_up"
    tools:context=".activities.SignUpActivity"
    android:background="@drawable/shape">

    <EditText
        android:id="@+id/userNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:gravity="right"
        android:hint="@string/user_name"/>


    <EditText
        android:id="@+id/userPasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@+id/userNameField"
        android:gravity="right"
        android:hint="@string/user_password"
        />

    <Button
        android:id="@+id/btnSignUpField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_signup"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/userPasswordField"
        android:background="@color/colorAccent"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/notification_ad">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
