<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login"
    tools:context=".activities.LoginActivity"
    android:background="@drawable/shape"
    >

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:gravity="right"
        android:hint="@string/user_name"/>

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@+id/userName"
        android:gravity="right"
        android:hint="@string/user_password"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:id="@+id/btnLogin"
        android:layout_below="@+id/userPassword"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_marginTop="35dp" />

    <TextView
        android:id="@+id/txtSignUp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_signup"
        android:layout_below="@+id/btnLogin"
        android:textColor="@color/colorAccent"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:layout_marginTop="20dp" />
</RelativeLayout>
