<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/headerCardView"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        card_view:cardUseCompatPadding="true"
        android:elevation="8dp">
        <RelativeLayout
            android:id="@+id/newJamHeader"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@color/colorPrimaryDark">

            <ImageView
                android:id="@+id/imgJamName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_credit_card_white_36dp"/>
            <EditText
                android:id="@+id/txtNewJamName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:layout_toLeftOf="@+id/imgJamName"
                android:clickable="true"
                android:textSize="15dp"

                android:hint="@string/new_jam_name"/>
            <ImageView
                android:id="@+id/imgJamValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/txtNewJamName1"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_monetization_on_white_36dp"
                />
            <EditText
                android:id="@+id/txtNewJamAmount1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="15dp"
                android:layout_toLeftOf="@+id/imgJamValue"
                android:hint="@string/new_jam_share_value"/>
            <ImageView
                android:id="@+id/imgJamSharesNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_person_white_36dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/imgJamValue"/>
            <EditText
                android:id="@+id/txtSharesNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:textSize="15dp"
                android:hint="@string/new_jam_shares_no"
                android:layout_below="@+id/txtNewJamAmount1"
                android:layout_toLeftOf="@+id/imgJamSharesNo"
                android:inputType="numberDecimal"
                />
            <ImageView
                android:id="@+id/imgJamDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_date_range_white_36dp"
                android:layout_toLeftOf="@+id/txtSharesNo"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/imgJamValue"/>
            <EditText
                android:id="@+id/txtNewJamDate1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textSize="15dp"
                android:layout_below="@+id/imgJamValue"
                android:layout_toLeftOf="@+id/imgJamDate"
                android:hint="@string/new_jam_start_day"/>
            <ImageView
                android:id="@+id/imgJamPeriod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_date_range_white_36dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/imgJamDate"/>
            <Spinner
                android:id="@+id/spinnerPeriod"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtSharesNo"
                android:layout_marginTop="20dp"
                android:layout_toLeftOf="@+id/imgJamPeriod"/>
            <CheckBox
                android:id="@+id/cbNewJamIsPublic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_jam_is_public"
                android:layout_below="@+id/imgJamDate"
                android:layout_toLeftOf="@+id/spinnerPeriod"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:checked="true" />
            <Button
                android:id="@+id/btnNewJamPaticipants"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:background="@color/colorPrimary"
                android:text="@string/btn_create_jam"
                android:textSize="17dp"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>