<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width = "match_parent"
        android:layout_height = "180dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="2dp">
        <RelativeLayout
            android:id="@+id/newJamHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
           >
                <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:textColor="@android:color/white"/>
                <ImageView
                    android:id="@+id/imgJamName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingBottom="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="3dp"
                    android:paddingLeft="10dp"
                    android:src="@drawable/ic_credit_card_white_24dp"/>
                <TextView
                    android:id="@+id/lblNewJamName1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/imgJamName"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="7dp"
                    android:clickable="true"
                    android:hint="@string/new_jam_name"/>
                <TextView
                    android:id="@+id/txtNewJamName1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:textStyle="italic"
                    android:layout_toLeftOf="@+id/lblNewJamName1"
                    android:clickable="true"/>
                <ImageView
                    android:id="@+id/imgJamSharesNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/imgJamName"
                    android:layout_marginRight="5dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:src="@drawable/ic_person_white_24dp"
                    />
                <TextView
                    android:id="@+id/lblSharesNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgJamName"
                    android:hint="@string/new_jam_shares_no"
                    android:layout_marginTop="5dp"
                    android:layout_toLeftOf="@+id/imgJamSharesNo"
                    android:paddingLeft="10dp"
                    android:inputType="numberDecimal"
                    />
                <TextView
                    android:id="@+id/txtSharesNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgJamName"
                    android:layout_marginTop="5dp"
                    android:layout_toLeftOf="@+id/lblSharesNo"
                    android:inputType="numberDecimal"
                    />
                <ImageView
                    android:id="@+id/imgJamValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/imgJamSharesNo"
                    android:paddingBottom="10dp"
                    android:layout_marginRight="5dp"
                    android:paddingLeft="10dp"
                    android:src="@drawable/ic_monetization_on_white_24dp"
                    />
                <TextView
                    android:id="@+id/lblNewJamAmount1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_marginTop="5dp"
                    android:layout_toLeftOf="@+id/imgJamValue"
                    android:layout_below="@+id/imgJamSharesNo"
                    android:paddingLeft="10dp"
                    android:hint="@string/new_jam_share_value"/>
            <TextView
                android:id="@+id/txtNewJamAmount1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="number"
                android:layout_toLeftOf="@+id/lblNewJamAmount1"
                android:layout_below="@+id/imgJamSharesNo"/>
                <ImageView
                    android:id="@+id/imgJamDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_date_range_white_24dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:paddingLeft="10dp"
                    android:layout_below="@+id/imgJamValue"/>
                <TextView
                    android:id="@+id/lblNewJamDate1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:layout_below="@+id/imgJamValue"
                    android:layout_toLeftOf="@+id/imgJamDate"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="10dp"
                    android:hint="@string/new_jam_start_day"/>
                <TextView
                    android:id="@+id/txtNewJamDate1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:inputType="date"
                    android:layout_below="@+id/imgJamValue"
                    android:layout_toLeftOf="@+id/lblNewJamDate1"/>
            <TextView
                android:id="@+id/lblNotify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:layout_below="@+id/imgJamDate"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/ntf_all_jam_users_to_pay"/>
            <ImageView
                android:id="@+id/imgNotify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_notifications_active_white_24dp"
                android:clickable="true"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"
                android:layout_toLeftOf="@+id/lblNotify"
                android:layout_below="@+id/imgJamDate"/>
            <TextView
                android:id="@+id/txtNotify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:layout_below="@+id/imgJamDate"
                android:layout_toLeftOf="@+id/lblNotify"/>
                <CheckBox
                    android:id="@+id/cbNewJamIsPublic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_jam_is_public"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/imgJamDate"
                    android:layout_marginRight="10dp"
                    android:visibility="gone"
                    android:checked="true" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>